[project]
name = "drosophila"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brian2==2.5.1",
    "cython<3",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "numpy==1.24.*",
    "pandas>=2.1.0",
    "pyarrow>=24.0.0",
    "setuptools<81",
]
